# ovn-lab-builder

./: README.md  pyproject.toml
config/: example_lab.json  example_lab_explict_ports.json
ovn_lab_builder/: ovn_builder.py  schema.py  topology.py  utils.py
ovn_lab_builder/cli/: __init__.py  main.py
tests/: test_ovn_builder.py  test_schema.py  test_topology.py
